<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <DUT Name="ST_HMI_Time" Id="{f96d23ad-76ed-4b8c-ba39-fbe9690e2b3e}">
    <Declaration><![CDATA[TYPE ST_HMI_Time :
STRUCT
	mins				:DINT; 		//Minutes
	sec					:DINT; 		//Seconds
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>